noinst_DATA=circleBTP_by_circleBCP.kigt conic_by_locus.kigt ConicCenter.kigt \
	ellipse.kig \
	fregier.kigt \
	LineConicMainAxis.kigt \
	LineConicSecondAxis.kigt \
	locustest.kig \
	mirrorpoint_by_translationpoint.kigt \
	parabolaBDF.kigt

builtinmacrodir	= $(kde_datadir)/kig/builtin-macros
builtinmacro_DATA = circle_by_point_and_segment.kigt
