INCLUDES=$(all_includes)

METASOURCES = AUTO

noinst_LTLIBRARIES=libfilters.la
noinst_HEADERS= \
	cabri-filter.h \
	exporter.h \
	exporttoimagedialog.h \
	exporttolatexdialog.h \
	exporttosvgdialog.h \
	filter.h \
	filters-common.h \
	kgeo-filter.h \
	kgeo-resource.h \
	kseg-defs.h \
	kseg-filter.h \
	latexexporter.h \
	native-filter.h \
	svgexporter.h \
	drgeo-filter.h \
	drgeo-filter-chooser.h
libfilters_la_SOURCES= \
	cabri-filter.cc \
	exporter.cc \
	exporttoimagedialog.cc \
	exporttoimagedialogbase.ui \
	exporttolatexdialog.cc \
	exporttolatexdialogbase.ui \
	exporttosvgdialog.cc \
	exporttosvgdialogbase.ui \
	filter.cc \
	filters-common.cc \
	kgeo-filter.cc \
	kseg-filter.cc \
	latexexporter.cc \
	native-filter.cc \
	svgexporter.cc \
	drgeo-filter.cc \
	drgeo-filter-chooser.cc \
	drgeo-filter-chooserbase.ui

