INCLUDES=$(all_includes)

METASOURCES = AUTO

noinst_LTLIBRARIES=libfilters.la
noinst_HEADERS= \
	cabri-filter.h \
	exporter.h \
	filter.h \
	filters-common.h \
	imageexporteroptions.h \
	kgeo-filter.h \
	kgeo-resource.h \
	kseg-defs.h \
	kseg-filter.h \
	latexexporter.h \
	native-filter.h \
	svgexporter.h \
	drgeo-filter.h \
	drgeo-filter-chooser.h
libfilters_la_SOURCES= \
	cabri-filter.cc \
	exporter.cc \
	filter.cc \
	filters-common.cc \
	imageexporteroptions.cc \
	imageexporteroptionsbase.ui \
	kgeo-filter.cc \
	kseg-filter.cc \
	latexexporter.cc \
	latexexporteroptions.ui \
	native-filter.cc \
	svgexporter.cc \
	svgexporteroptions.ui \
	drgeo-filter.cc \
	drgeo-filter-chooser.cc \
	drgeo-filter-chooserbase.ui

