kigicondatadir = $(kde_datadir)/kig/pics
kigicondata_DATA = \
	angle.png \
	angle-bisector.png \
	angle-size.png \
	areaCircle.png \
	arc.png \
	arc-center.png \
	attacher.png \
	baseCircle.png \
	bisection.png \
	centralsymmetry.png \
	circlebcl.png \
	circlebcp.png \
	circlebpd.png \
	circlebps.png \
	circlebtp.png \
	circlelineintersection.png \
	circumference.png \
	conicb5p.png \
	coniclineintersection.png \
	conicsradicalline.png \
	curvelineintersection.png \
	directrix.png \
	distance.png \
	ellipsebffp.png \
	harmonichomology.png \
	genericaffinity.png \
	genericprojectivity.png \
	halflinebyvector.png \
	hyperbolabffp.png \
	intersection.png \
	line.png \
	linebyvector.png \
	locus.png \
	mirrorpoint.png \
	move.png \
	paint.png \
	parabolabtp.png \
	parallel.png \
	perpendicular.png \
	pointOnLine.png	\
	point.png \
	pointxy.png \
	radicalline.png \
	ray.png \
	rotation.png \
	scale.png \
	script.png \
	script-python.png \
	segment.png \
	segmentaxis.png \
	segment-midpoint.png \
	sizer.png \
	slope.png \
	stretch.png \
	tangent.png \
	test.png \
	testcollinear.png \
	testcontains.png \
	testorthogonal.png \
	testparallel.png \
	text.png \
	translation.png \
	triangle.png \
	vector.png \
	vectordifference.png \
	vectorsum.png \
	view_fit_to_page.png \
	window_fullscreen.png \
	xfig.png
