kigicondatadir = $(kde_datadir)/kig/pics
kigicondata_DATA = \
	angle.png \
	angle-bisector.png \
	angle-size.png \
	areaCircle.png \
	arc.png \
	arc-center.png \
	attacher.png \
	baseCircle.png \
	bisection.png \
	centerofcurvature.png \
	centralsymmetry.png \
	circlebcl.png \
	circlebcp.png \
	circlebpd.png \
	circlebps.png \
	circlebtp.png \
	circlelineintersection.png \
	circumference.png \
	conicb5p.png \
	coniclineintersection.png \
	conicsradicalline.png \
	convexhull.png \
	curvelineintersection.png \
	directrix.png \
	distance.png \
	ellipsebffp.png \
	en.png \
	genericaffinity.png \
	genericprojectivity.png \
	halflinebyvector.png \
	harmonichomology.png \
	hexagonbcv.png \
	hyperbolabffp.png \
	intersection.png \
	line.png \
	linebyvector.png \
	locus.png \
	mirrorpoint.png \
	move.png \
	paint.png \
	parabolabtp.png \
	parallel.png \
	perpendicular.png \
	pointOnLine.png	\
	point.png \
	pointxy.png \
	polygon.png \
	polygonsides.png \
	polygonvertices.png \
	radicalline.png \
	ray.png \
	rotation.png \
	scale.png \
	script.png \
	script-python.png \
	segment.png \
	segmentaxis.png \
	segment-midpoint.png \
	sizer.png \
	slope.png \
	stretch.png \
	tangent.png \
	test.png \
	testcollinear.png \
	testcontains.png \
	testorthogonal.png \
	testparallel.png \
	text.png \
	translation.png \
	triangle.png \
	vector.png \
	vectordifference.png \
	vectorsum.png \
	view_fit_to_page.png \
	w.png \
	window_fullscreen.png \
	xfig.png
